# Game_recommendation

./: .gitignore  CLAUDE.md  INTENT.md  ISSUES.md  README.md  README_PIPELINE.md  [YBIGTA] 제작 마스터시트 명세서 .xlsx  pinned-noml.txt  pinned.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
Crawling/: crawling.ipynb  steam_review_pipeline.py  steam_tags_crawler.py  steam_tags_crawler_parallel.py  user_game_scores_penalty.py  user_reviews_crawler_simple.py  user_reviews_crawler_simple2.py
EDA/: game_analysis.py  visualize_review_length.py
FE/: create_faiss_index.py  preprocessing.py  run_online_pipeline.py  step2.py  step3.py  step4.py  step5.py  step6.py  step7.py  step9.py  tag_similarity_matrix.py  user_game_scores_penalty.py
archive/: EXAMPLES.md  README.md  README_ONLINE_SERVING.md  step14.py
config/: default.yaml
crawlers/: steam_reviews.py  steam_tags.py  steam_tags_parallel.py  user_reviews.py
data_collection/: __init__.py  crawl_unified.py  db.py
docs/: INTENT.md  ISSUES.md  README.md  README_PIPELINE.md  ROADMAP.md  STYLEGUIDE.md  architecture.md  data-layer.md  decisions.md  evaluation.md  glossary.md  operations.md  portfolio-headlines.md  results.md  roadmap.md  runbook_pool_expansion.md  status.md  technical_reference.html
eda/: game_analysis.py
experiments/: DELIBERATION_LOG.md  INDEX.md  README.md  registry.jsonl
game_rec/: __init__.py  config.py
outputs/: game_weight.npy  index_maps.json  params_v1.json  tag_beta.npy  tag_beta_stats.json  text_align_stats.json
pipeline/: __init__.py
(+454 files in other folders)
