[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game-recommendation"
version = "0.1.0"
description = "Steam game recommendation agent — personal follow-up to YBIGTA 27th team project"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["game_rec*", "st_app*"]
exclude = ["archive*", "outputs*", "images*", "EDA*", "Crawling*", "FE*"]
