[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game-recommendation"
version = "0.1.0"
description = "Steam game recommendation agent."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["game_rec*", "app*", "pipelines*"]
exclude = ["outputs*", "eda*", "crawlers*", "scripts*"]
